--- a/layouts/default.njk
+++ b/layouts/default.njk
@@ -8,12 +8,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{{ root }}/css/main.css">
 
     </head>
     <body>
+
       {% block content %}
-          <h1>{% if realtitle %}{{ realtitle }}{% else %}{{ title }}{% endif %}</h1>
-          {{ contents | safe }}
+        {% for item in sections %}
+            {{ item.contents | safe }}
+        {% endfor %}
       {% endblock %}
+      
     </body>
 </html>
