--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,11 +1,15 @@
 @import '010-settings/reset';
 @import '010-settings/misc';
 
+
+@import '020-tools/vars';
+@import '020-tools/mixins';
 // @import '030-generic/syntax-highlighting';
 
 @import '040-base-elements/images';
 @import '040-base-elements/typography';
 
+@import '050-layouts/grid';
 
 @import '060-objects/box';
 @import '060-objects/button';
