--- a/assets/sass/020-tools/_mixins.scss
+++ b/assets/sass/020-tools/_mixins.scss
@@ -18,7 +18,7 @@
     }
   // }
 }
-
+// 
 // @mixin delay($items_number, $delay) {
 //   @for $i from 1 through $items_number {
 //     &:nth-child(#{$i}) {
