--- a/assets/sass/050-layouts/_grid.scss
+++ b/assets/sass/050-layouts/_grid.scss
@@ -1,7 +1,22 @@
 body {
     background-color: black;
+    overflow: hidden;
 }
 
+// .background {
+//   background: url('../images/idRob2018FINAL.jpg') no-repeat;
+//   background-size: contain;
+//   background-position: center center;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   height: 100vh;
+//   width: 200vw;
+//   background-position-x: center;
+//   background-position-y: center;
+//   transform-origin: left top;
+//   transition: transform .4s ease-in-out;
+// }
 
 #menuChk {
   display: none;
@@ -18,7 +33,8 @@ body {
   left: 1.5em;
 }
 
-#menuChk:checked ~ .wrapper {
+#menuChk:checked ~ .wrapper,
+#menuChk:checked ~ .background {
   transform: scale(.5);
 }
 
@@ -64,6 +80,7 @@ body {
   position: relative;
   width: var(--boxwidth);
   height: var(--boxheight);
+  overflow: hidden;
   // @temp
   // border: 25px blue solid;
   // margin: 25px;
@@ -78,6 +95,20 @@ body {
     height: var(--boxheight);
     opacity: 0;
     z-index: 100;
+  }
+
+  .background {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+  }
+}
+
+@for $i from 0 through $slideNumber {
+  #clipped#{$i+1} {
+      clip-path: url('#path#{$i+1}');
   }
 }
 
