--- a/assets/sass/050-layouts/_grid.scss
+++ b/assets/sass/050-layouts/_grid.scss
@@ -1,22 +1,7 @@
 body {
-    background-color: black;
+    background-color: rgba(0,0,0,.2);
     overflow: hidden;
 }
-
-// .background {
-//   background: url('../images/idRob2018FINAL.jpg') no-repeat;
-//   background-size: contain;
-//   background-position: center center;
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   height: 100vh;
-//   width: 200vw;
-//   background-position-x: center;
-//   background-position-y: center;
-//   transform-origin: left top;
-//   transition: transform .4s ease-in-out;
-// }
 
 #menuChk {
   display: none;
@@ -31,11 +16,15 @@ body {
   height: 100vh;
   top: 1.5em;
   left: 1.5em;
+  transform-origin: 50% 5%;
 }
 
-#menuChk:checked ~ .wrapper,
-#menuChk:checked ~ .background {
-  transform: scale(.5);
+
+#menuChk:checked ~ .wrapper, {
+  transform: scale(.3);
+  @media screen and (min-width:759px) {
+    transform: scale(.2);
+  }
 }
 
 .anchor {
@@ -49,13 +38,21 @@ body {
 
 
 .grid {
+
   position: absolute;
   transition: transform .7s ease-in-out;
   width: calc(var(--slideNumber)*100vw);
   height: 100vh;
   display: grid;
-  grid-template: repeat(4, var(--boxheight))/ repeat(3, var(--boxwidth));
-  grid-gap: 1.5em;
+  grid-template: var(--boxheight) auto/ repeat(3, var(--boxwidth));
+
+  grid-column-gap: 1.5em;
+  grid-row-gap: 1.5em;
+  @media screen and (min-width:759px) {
+    grid-row-gap: 10em;
+  }
+
+
 }
 
 :target ~ .grid {
@@ -72,6 +69,32 @@ body {
   #p#{$i+1}:target {
     left: calc(#{$i}*100vw);
     top: 0;
+  }
+}
+
+@for $i from 0 through $slideNumber {
+  #item#{$i+1} {
+    grid-column: #{$i + 1};
+    grid-row: 1;
+  }
+}
+
+
+.titre-item {
+  height: 105%;
+  font-size: 20vw;
+  writing-mode: tb;
+  text-orientation: mixed;
+  text-transform: uppercase;
+  word-wrap: break-word;
+  justify-self: center;
+  letter-spacing: 10vw;
+  line-height: 138%;
+
+  a {
+    font-family: inherit;
+    color: black;
+    text-decoration: none;
   }
 }
 
@@ -103,6 +126,10 @@ body {
     top: 0;
     right: 0;
     overflow: hidden;
+  }
+
+  article {
+    position: relative;
   }
 }
 
