--- a/layouts/default.njk
+++ b/layouts/default.njk
@@ -24,29 +24,33 @@
     {% block content %}
       {% set idItem = 1 %}
       {% for item in sections %}
-          <div class="item" id="item{{idItem}}">
-            <div class="navbar">
-							<label for="menuChk" class="menuBtn" aria-label="Toggle Menu Visibility">☰</label>
-						</div>
-    				<a href="#p{{idItem}}" class="focus-page">focus</a>
-            <label class="selected-closer" for="menuChk">&nbsp;</label>
-            {{ item.contents | safe }}
-            {% set idItem = idItem + 1 %}
-            <a href="#p{{idItem}}">Next</a>
-            <img id="clipped{{idItem - 1}}" class="background" src="./images/idRob2018FINAL.jpg" alt="">
+          <h2 class="titre-item" id="titreItem{{ idItem }}"><a href="#p{{idItem}}">{{ item.titleitem }}</a></h2>
+          <section class="item" id="item{{idItem}}">
+            <img id="clipped{{idItem}}" class="background" src="./images/idRob2018FINAL.jpg" alt="">
 
             <svg height="0" width="0">
               <defs>
-                <clipPath id="path{{idItem - 1}}">
-                  <text x="300" y="1000"
-                        font-family="calendas_plusbold"
-                        font-size="145vh">
-                    {{ item.lettre }}
-                  </text>
+                <clipPath id="path{{idItem}}">
+                    <text class="text" x="300" y="1000"
+                          font-family="calendas_plusbold"
+                          font-size="145vh">
+                      {{ item.lettre }}
+                    </text>
                 </clipPath>
               </defs>
             </svg>
-          </div>
+            <article>
+              <div class="navbar">
+                <label for="menuChk" class="menuBtn" aria-label="Toggle Menu Visibility">☰</label>
+              </div>
+              <a href="#p{{idItem}}" class="focus-page">focus</a>
+              <label class="selected-closer" for="menuChk">&nbsp;</label>
+              <h2>{{item.title}}</h2>
+              {{ item.contents | safe }}
+              {% set idItem = idItem + 1 %}
+              <a href="#p{{idItem}}">Next</a>
+            </article>
+          </section>
       {% endfor %}
     {% endblock %}
         </div>
