--- a/layouts/default.njk
+++ b/layouts/default.njk
@@ -8,11 +8,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{{ root }}/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
 
     </head>
     <body>
-
+      <!-- <canvas id="fs" width="2000" height="2000" class="grain-canvas"></canvas> -->
       <input id="menuChk" name="menuChk" type="checkbox">
       <div class="wrapper">
   {% set id = 1 %}
@@ -26,6 +26,7 @@
       {% for item in sections %}
           <h2 class="titre-item" id="titreItem{{ idItem }}"><a href="#p{{idItem}}">{{ item.titleitem }}</a></h2>
           <section class="item" id="item{{idItem}}">
+            <!-- <canvas id="grain{{idItem}}" class="grain-canvas c{{idItem}}" width="1000" height="1000"></canvas> -->
             <img id="clipped{{idItem}}" class="background" src="./images/idRob2018FINAL.jpg" alt="">
 
             <svg height="0" width="0">
