--- a/assets/sass/020-tools/_vars.scss
+++ b/assets/sass/020-tools/_vars.scss
@@ -1,10 +1,18 @@
 // CSS var
 :root {
-  --slideNumber: 5;
-  --boxwidth: calc(100vw - 6em);
-  --boxheight: calc(100vh - 3em);
-  --translateWidth: calc(100vw - 5em);
+  --slideNumber: 6;
+  --boxwidth: calc(100vw);
+  --boxheight: calc(100vh);
+  --translateWidth: calc(100vw);
+}
+
+@media screen and (min-width: 580px) {
+  :root {
+    --boxwidth: calc(100vw - 3em);
+    --boxheight: calc(100vh - 3em);
+    --translateWidth: calc(100vw - 1.5em);
+  }
 }
 
 // SCSS var
-$slideNumber: 5;
+$slideNumber: 6;
