--- a/assets/sass/040-base-elements/_typography.scss
+++ b/assets/sass/040-base-elements/_typography.scss
@@ -14,6 +14,10 @@ body,
 a,
 p {
   font-family: 'archiaregular', sans-serif;
+
+  strong {
+    font-family: 'archiabold', sans-serif;
+  }
 }
 
 h1,
