--- a/assets/sass/080-ui-components/_main.scss
+++ b/assets/sass/080-ui-components/_main.scss
@@ -12,3 +12,81 @@
 //       clip-path: url('#path#{$i+1}');
 //   }
 // }
+
+
+.item > main > article {
+  display: grid;
+  grid-template: 10% 50vh 20vw / auto;
+  height: calc(100% - 15px);
+  grid-row-gap: 2em;
+  grid-column-gap: 0em;
+  margin: 0 0vw;
+
+
+  @media screen and (min-width:770px) {
+    grid-template: 10% 80% / minmax(270px, .7fr) min-content;
+    grid-column-gap: 3em;
+    grid-row-gap: 3em;
+  }
+
+  @media screen and (min-width:870px) {
+      margin: 0 1vw;
+      grid-column-gap: 6em;
+  }
+
+  @media screen and (min-width:1110px) {
+      margin: 0 100px;
+  }
+
+  h2 {
+    grid-column: 1 / 3;
+    font-size: calc(2rem + 2vw);
+  }
+
+  iframe,
+  img {
+    width: 100%;
+    max-height: 100%;
+    height: 100%;
+    grid-column: 1 / 3;
+    grid-row: 3 / 3;
+    max-width: 70%;
+    margin: auto;
+    @media screen and (min-width:770px) {
+      grid-column: 1 /1;
+      grid-row: 2 / 2;
+      max-height: 52%;
+      max-width: inherit;
+      margin: 0;
+    }
+
+  }
+
+  p {
+    grid-column: 1 / 3;
+    grid-row: 2 / 2;
+
+
+    white-space: pre;
+    line-height: normal;
+    font-size: 3.5vw;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    @media screen and (min-width:425px) {
+        font-size: 1rem;
+    }
+
+    @media screen and (min-width:770px) {
+      grid-column: 2 /2;
+      grid-row: 2 / 2;
+      font-size: calc(.5rem + 1vw);
+    }
+
+    @media screen and (min-width: 1240px) {
+      font-size: 20px
+    }
+
+  }
+
+}
