--- a/assets/sass/060-objects/_button.scss
+++ b/assets/sass/060-objects/_button.scss
@@ -1,1 +1,31 @@
 
+.menuBtn {
+  border-radius: 41px;
+  font-size: 3rem;
+  font-family: calendasplus_bold;
+  position: absolute;
+  top: 10px;
+  left: 12px;
+  padding: 0 7px;
+  box-shadow: 6px 8px 10px 0px rgba(1,1,1,0.2);
+  background: url('../images/idRob2018FINAL.jpg');
+  // background-position: 990px 900px;
+  transition: box-shadow .2s, top .1s, left .1s;
+  cursor: pointer;
+  z-index: 500;
+}
+
+@for $i from 0 through $slideNumber {
+
+    #item#{$i+1} .menuBtn {
+        background-position: calc(990px - 100px*#{$i}) calc(900px - 100px*#{$i});
+    }
+
+    #item#{$i+1} .menuBtn:hover {
+        background-position: calc(990px - 100px*#{$i+1}) calc(900px - 100px*#{$i+1});
+        box-shadow: 0px 0px 0px 0px rgba(1,1,1,0);
+        color: white;
+        top: 14px;
+        left: 16px;
+    }
+}
