--- a/assets/sass/080-ui-components/_main.scss
+++ b/assets/sass/080-ui-components/_main.scss
@@ -14,7 +14,7 @@
 // }
 
 
-.item > main > article {
+.item > div > article {
   display: grid;
   grid-template: 10% 50vh 20vw / auto;
   height: calc(100% - 15px);
@@ -24,7 +24,7 @@
 
 
   @media screen and (min-width:770px) {
-    grid-template: 10% 80% / minmax(270px, .7fr) min-content;
+    grid-template: 10% 90% / minmax(270px, .7fr) min-content;
     grid-column-gap: 3em;
     grid-row-gap: 3em;
   }
@@ -38,16 +38,13 @@
       margin: 0 100px;
   }
 
-  h2 {
+  > h2 {
     grid-column: 1 / 3;
     font-size: calc(2rem + 2vw);
   }
 
   iframe,
   img {
-    width: 100%;
-    max-height: 100%;
-    height: 100%;
     grid-column: 1 / 3;
     grid-row: 3 / 3;
     max-width: 70%;
@@ -55,38 +52,52 @@
     @media screen and (min-width:770px) {
       grid-column: 1 /1;
       grid-row: 2 / 2;
-      max-height: 52%;
       max-width: inherit;
+      width: 100%;
       margin: 0;
     }
 
   }
 
-  p {
+  iframe {
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+
+    @media screen and (min-width:770px) {
+      max-height: 52%;
+    }
+  }
+
+  .content-item {
     grid-column: 1 / 3;
     grid-row: 2 / 2;
 
+    p {
+      white-space: pre;
+      line-height: normal;
+      font-size: 3.5vw;
+      overflow-x: hidden;
+      overflow-y: auto;
 
-    white-space: pre;
-    line-height: normal;
-    font-size: 3.5vw;
-    overflow-x: hidden;
-    overflow-y: auto;
-
-    @media screen and (min-width:425px) {
+      @media screen and (min-width:425px) {
         font-size: 1rem;
+      }
     }
 
     @media screen and (min-width:770px) {
       grid-column: 2 /2;
       grid-row: 2 / 2;
-      font-size: calc(.5rem + 1vw);
+      p {
+        font-size: calc(.5rem + 1vw);
+      }
     }
 
     @media screen and (min-width: 1240px) {
-      font-size: 20px
+      p {
+        font-size: 20px
+      }
     }
-
   }
 
 }
