--- a/assets/sass/080-ui-components/_main.scss
+++ b/assets/sass/080-ui-components/_main.scss
@@ -31,7 +31,7 @@
 
   @media screen and (min-width:870px) {
       margin: 0 1vw;
-      grid-column-gap: 6em;
+      grid-column-gap: 7em;
   }
 
   @media screen and (min-width:1110px) {
@@ -79,6 +79,7 @@
       font-size: 3.5vw;
       overflow-x: hidden;
       overflow-y: auto;
+      height: 100%;
 
       @media screen and (min-width:425px) {
         font-size: 1rem;
