--- a/assets/sass/080-ui-components/_main.scss
+++ b/assets/sass/080-ui-components/_main.scss
@@ -72,35 +72,65 @@
   .content-item {
     grid-column: 1 / 3;
     grid-row: 2 / 2;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 100%;
 
-    p {
+    h3 {
+      padding-bottom: 10px;
+    }
+
+    p,
+    li {
       white-space: pre;
       line-height: normal;
       font-size: 3.5vw;
       overflow-x: hidden;
       overflow-y: auto;
-      height: 100%;
 
       @media screen and (min-width:425px) {
         font-size: 1rem;
       }
     }
 
+    .home-indication {
+      line-height:50px;
+      font-size: 1rem;
+
+      @media screen and (min-width:360px) {
+        font-size: 1.5rem;
+      }
+    }
+
+
+
+    li {
+        line-height: 50px;
+    }
+
     @media screen and (min-width:770px) {
       grid-column: 2 /2;
       grid-row: 2 / 2;
-      p {
+      height: calc(var(--boxheight) - 19vh);
+
+      p,
+      li {
         font-size: calc(.5rem + 1vw);
-        height: calc(var(--boxheight) - 19vh);
       }
     }
 
     @media screen and (min-width: 1240px) {
-      p {
+      p,
+      li {
         font-size: 20px;
         padding-right: 20px;
       }
     }
+  }
+
+
+  .home-item {
+    height: var(--boxheight);
   }
 
 }
