--- a/layouts/default.njk
+++ b/layouts/default.njk
@@ -10,6 +10,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
 
+        <!-- SEO -->
+        <meta name="description" content="Portfolio de Robinson Lacotte - Développeur web - Créatif"/>
+        <meta name="robots" content="noodp"/>
+        <link rel="canonical" href="https://robinsonlacotte.com" />
+        <meta property="og:locale" content="fr_FR" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="" />
+        <meta property="og:description" content="Portfolio de Robinson Lacotte - Développeur web - Créatif" />
+        <meta property="og:url" content="https://robinsonlacotte.com" />
+        <meta property="og:site_name" content="Portfolio de Robinson Lacotte" />
+        <!-- /SEO -->
+
     </head>
     <body>
       <!-- <canvas id="fs" width="2000" height="2000" class="grain-canvas"></canvas> -->
