--- a/layouts/default.njk
+++ b/layouts/default.njk
@@ -11,13 +11,13 @@
         <link rel="stylesheet" href="css/main.css">
 
         <!-- SEO -->
-        <meta name="description" content="Portfolio de Robinson Lacotte - Développeur web - Créatif"/>
+        <meta name="description" content="Portfolio de Robinson Lacotte - Développeur web - Créatif - Étudiant en Bachelor Designer et Développeur à Gobelins Paris (2019)"/>
         <meta name="robots" content="noodp"/>
         <link rel="canonical" href="https://robinsonlacotte.com" />
         <meta property="og:locale" content="fr_FR" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="" />
-        <meta property="og:description" content="Portfolio de Robinson Lacotte - Développeur web - Créatif" />
+        <meta property="og:description" content="Portfolio de Robinson Lacotte - Développeur web - Créatif - Étudiant en Bachelor Designer et Développeur à Gobelins Paris (2019)" />
         <meta property="og:url" content="https://robinsonlacotte.com" />
         <meta property="og:site_name" content="Portfolio de Robinson Lacotte" />
         <!-- /SEO -->
@@ -78,7 +78,7 @@
             </div>
             {% endif %}
             {% set idItem = idItem + 2 %}
-            {% if idItem === 7 %}
+            {% if idItem === 8 %}
             {% set idItem = 1 %}
             {% endif %}
             <div class="next">
