--- a/assets/sass/080-ui-components/_main.scss
+++ b/assets/sass/080-ui-components/_main.scss
@@ -15,18 +15,14 @@
 
 
 .item > div > article {
-  display: grid;
-  grid-template: 10% 50vh 20vw / auto;
-  height: calc(100% - 15px);
-  grid-row-gap: 2em;
-  grid-column-gap: 0em;
-  margin: 0 0vw;
-
 
   @media screen and (min-width:770px) {
-    grid-template: 10% 90% / minmax(270px, .7fr) min-content;
+    display: grid;
+    grid-template: 10% 90% / minmax(auto, .7fr) min-content;
     grid-column-gap: 3em;
     grid-row-gap: 3em;
+    height: calc(100% - 15px);
+    margin: 0 0vw;
   }
 
   @media screen and (min-width:870px) {
@@ -42,13 +38,15 @@
     grid-column: 1 / 3;
     font-size: calc(2rem + 2vw);
   }
-
+  img {
+        width: 200px;
+  }
   iframe,
   img {
     grid-column: 1 / 3;
     grid-row: 3 / 3;
     max-width: 70%;
-    margin: auto;
+    margin: 50px auto;
     @media screen and (min-width:770px) {
       grid-column: 1 /1;
       grid-row: 2 / 2;
@@ -62,7 +60,7 @@
   iframe {
     max-height: 100%;
     width: 100%;
-    height: 100%;
+    height: 250px;
 
     @media screen and (min-width:770px) {
       max-height: 52%;
@@ -74,25 +72,35 @@
     grid-row: 2 / 2;
     overflow-x: hidden;
     overflow-y: auto;
-    height: 100%;
+    @media screen and (min-width:770px) {
+      height: 100%;
+    }
 
     h3 {
       padding-bottom: 10px;
+      @media screen and (min-width: 770px) {
+        font-size: 1.2rem;
+      }
     }
 
     p,
     li {
       line-height: normal;
-      font-size: 4.5vw;
+      font-size: 1rem;
       overflow-x: hidden;
       overflow-y: auto;
       max-width: 95%;
+      width: 63vw;
 
       @media screen and (min-width:425px) {
-        font-size: 3.5vw;
-        white-space: pre;
+        // font-size: 3.5vw;
         font-size: 1rem;
         max-width: inherit;
+      }
+
+      @media screen and (min-width: 770px) {
+        white-space: pre;
+        width: inherit;
       }
     }
 
