--- a/assets/sass/040-base-elements/_typography.scss
+++ b/assets/sass/040-base-elements/_typography.scss
@@ -20,6 +20,10 @@ p {
   strong {
     font-family: 'archiabold', sans-serif;
   }
+
+  em {
+    font-family: 'archiathin', sans-serif;
+  }
 }
 
 h1,
