--- a/assets/sass/080-ui-components/_main.scss
+++ b/assets/sass/080-ui-components/_main.scss
@@ -38,11 +38,13 @@
     grid-column: 1 / 3;
     font-size: calc(2rem + 2vw);
   }
-  img {
+  img,
+  video {
         width: 200px;
   }
   iframe,
-  img {
+  img,
+  video {
     grid-column: 1 / 3;
     grid-row: 3 / 3;
     max-width: 70%;
@@ -53,6 +55,7 @@
       max-width: inherit;
       width: 100%;
       margin: 0;
+      margin-top: 35px;
     }
 
   }
@@ -143,4 +146,11 @@
     height: calc(var(--boxheight) - 132px);
   }
 
+}
+
+.index-list {
+  display: none;
+      @media screen and (min-width: 490px) {
+        display: inline;
+      }
 }
